--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Tangerine&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Roboto&display=swap" rel="stylesheet">
 	<title>Dwarven Overlords</title>
 </head>
 <body>
